# sar_robot_translation

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/: robot_translation_config.example.json  robot_translation_config.json  robot_translation_node.py
